tests/parser/syntax-errors/unexpected-indentation/unexpected_indentation_if_stmt.choc
# RUN: choco-opt "%s" | filecheck "%s"

def foo():
    if True:
        stmt1
         stmt2

# CHECK:      SyntaxError (line 6, column 9): Unexpected indentation.
# CHECK-NEXT: >>>         stmt2
# CHECK-NEXT: >>>--------^
